10-14-13
 - Fixed a potential crash with EXTEND.CFG loading if extra
   strings were in there.
 - Press enter for 'Y' responses in the menus.  i.e. Press enter
   to confirm quit.

10-13-13
 - Removed the DEH startup banners as it's causing a hard lock in
   debug compiled builds.
 - Hacked around braintargeton for Doom 2 final boss and save restores.
   Was causing crashes for me in Perdition's Gate.
 - noquitsound in EXTEND.CFG to disable the randomized quit sound.
 - Fixed MASSACRE cheat not killing Lost Souls.
 - Fixed SECRETS FOUND automap double faulting in debug compiles.
 - "-hacx" to load HACX.
 - Experimental internal DEH loading support from WADs.
   The Z_ChangeTag is not changed, but I haven't found any problems yet.

10-06-13
 - If you're in a fake netgame (i.e. ipxsetup -nodes 1) you can
   now load a game or start a new one.

10-05-13
 - noprecache in EXTEND.CFG to disable graphics precaching.

10-04-13
 - "-gus" paramater now loads the wads internally from the EXE.
   You no longer need the GUS1M.WAD or GUS1MIID.WAD present to load it.
 - useIntGus in EXTEND.CFG to always autoload the updated GUS1M WADs.
 - Moved all the new config stuff to EXTEND.CFG.  Was starting to get
   out of hand.
 - novert is now in EXTEND.CFG as well.  Setting "-novert" will also
   toggle novert in EXTEND.CFG.

10-02-13
 - Draw Time clock on Automap with drawTime in config file.
   * Set to 1 for Military Time.
   * Set to 2 for Standard Time.

10-01-13
 - Automap code for keys (in easy skill) and secret doors from Heretic.

09-29-13
 - Put a "return" instead of a "break" in switch(gamemap) for Chex Quest.
   Was causing Map 5 finishes to trigger the Finale or nothing at all!
 - Fixed any menu displayed after M_SetMessage not displaying.
   i.e. The shareware Read This! screen after selecting Episode 2 or 3.
   Apparently, this bug was in the final v1.9 of Doom Shareware as well.
 - Fixed key spacing in fullscreen mode with Chex Quest.